src/app/club-detail/club-detail.component.css
h5, h5 > a {
  font-family: Lato;
  font-weight: 600;
  color: black;
  text-align: center;
}

.left-content-pane {
  margin-left:3.5%;
  margin-right: 8px;
}

.sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 104px;
}

.card {
    font-size: 1em;
    overflow: hidden;
    padding: 0;
    border:1 solid #83868a;
    border-radius: 0;
    /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
}

.club-detail-card {
  width:66.6%;
}

.sidebar-card {
  width:21.9%;
}

.club-banner {
  width:100%;
  height:auto;
}
.card-img-top {
  display: block;
  width: 100%;
  height: auto;
  border-radius:0;
}
.club-avatar {
  display: block;
  position:absolute;
  transform: translate(15%, 80%);
  width: 22.2%;
  height:auto;
  border:5px solid white;
  border-radius:10px;
}

.club-event-avatar {
  display: block;
  width: 50px;
  height:50px;
  border-radius: 50%;
  /*border: 1px solid darkgrey;*/
}

.club-card-text {
  margin-left:34%;
}

.club-title {
  font-family:Lato-Black;
  font-size:26px;
  color:#000000;
  letter-spacing:0;
  text-align:left;
}

.club-event-title {
  font-size: 1.15em;
  font-family:Lato-Bold;
  line-height: 1.2857em;
  font-weight:500;
}

.card-text {
  font-family:Lato-Regular;
  clear: both;
  margin-top: .5em;
  font-size:0.9em;
  color: rgba(0, 0, 0, .68);
}

.card-datetime {
  font-family:Lato-Regular;
  font-size:14px;
  color:#83868a;
}

.club-tags {
  font-family:Lato-Medium;
  font-size:16px;
  color:#83868a;
  letter-spacing:0;
  text-align:left;
}

.grey-line {
  border:0 solid #83868a;
  width:561.5px;
  height:2.5px;
}

.club-detail-text {
  font-family:Lato-Medium;
  font-size:13px;
  color:#83868a;
  letter-spacing:0;
  text-align:left;
}

.subscribe-btn {
  margin-top:1%;
  border:2px solid #433089;
  border-radius:2px;
  width:130px;
  height:30px;
  text-align:center;
}

.subscribe-btn-text {
  font-family:Lato-Heavy;
  font-size:16px;
  color:#433089;
  letter-spacing:0;
}

.card-header-text {
  font-family:Lato-Black;
  font-size:16px;
  color:#83868a;
  letter-spacing:0;
  text-align:left;
}

.club-detail-body {
  font-family:Lato-Medium;
  font-size:13px;
  color:#000000;
  letter-spacing:0;
  text-align:left;
}

.job-posting-subheader {
  font-family:Lato-Medium;
  font-size:10px;
  color:#83868a;
  letter-spacing:0;
  text-align:left;
}

.open-positions-icon {
  width:15%;
}

.icon {
  height:18px;
  margin-right:10px;
}

.head-shot {
  height: 160px;
  width: 160px;
  border: 1px solid black;
}

